<resources>
    <string name="app_name">VeshWasher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="login_button_txt">Login</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="register_button_txt">Register</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_user_navigation">UserNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="machine_name">machine name</string>
    <string name="machine_programme">machine programme</string>
    <string name="are_you_sure">Are you sure you want to remove this machine?</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="viewMachines">View machines</string>
    <string name="done_button">Done</string>
</resources>