<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="matejpersic_orwima_proj.ferit.veshwasher.ui.UserUsingMachines.MachinesUserIsUsingFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="matejpersic_orwima_proj.ferit.veshwasher.ui.UserAvailableMachines.UserMachinesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_user_available_machines" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="matejpersic_orwima_proj.ferit.veshwasher.ui.UserLogout.UserLogoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>