<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

        <EditText
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/register_et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email" />
        <EditText
            android:layout_below="@id/register_et_mail"
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />
        <EditText
            android:layout_below="@id/register_et_password"
            android:id="@+id/register_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password" />
        <Button
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/register_et_confirm_password"
            android:id="@+id/register_btn"
            android:text="@string/register_button_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>
