<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminRemoveMachineActivity">

    <TextView
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:id="@+id/admin_confirm_remove"
        android:layout_centerInParent="true"
        android:text="@string/are_you_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_below="@id/admin_confirm_remove"
        android:id="@+id/yes_btn"
        android:text="@string/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <Button
        android:text="@string/cancel"
        android:layout_centerInParent="true"
        android:layout_below="@id/yes_btn"
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>